--- a/docker-compose-php80.yml
+++ b/docker-compose-php80.yml
@@ -2,13 +2,10 @@ version: "3.7"
 services:
   app:
     build:
-      args:
-        user: ${USER}
-        uid: 1000
       context: .
-      dockerfile: Dockerfile
-    image: ${APP_NAME}
-    container_name: ${APP_NAME}
+      dockerfile: .docker/php80/Dockerfile
+    image: php80-collection
+    container_name: php-collection
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
