--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     }
   },
   "scripts": {
-    "test": "./vendor/bin/phpunit -c phpunit.xml"
+    "test": "./vendor/bin/phpunit",
+    "test-c": "./vendor/bin/phpunit --coverage-text"
   }
 }
