--- a/docker/php81/docker-compose.yml
+++ b/docker/php81/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     working_dir: /var/www/
     volumes:
       - ../../:/var/www
+      - ./xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ./error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
     networks:
       - default
 
