--- a/docker/php82/docker-compose.yml
+++ b/docker/php82/docker-compose.yml
@@ -4,12 +4,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: php83-collection
+    image: php82-collection
     container_name: php-collection
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
       - ../../:/var/www
+      - ./xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ./error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
     networks:
       - default
 
