--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,5 +41,5 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          composer global require php-coveralls/php-coveralls
-          php-coveralls --coverage_clover=build/logs/clover.xml -v --exclude-no-stmt
+          composer require php-coveralls/php-coveralls
+          vendor/bin/php-coveralls --coverage_clover=build/logs/clover.xml -v
