--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,14 +32,12 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
 
-      - name: Run Tests with Code Coverage
-        run: |
-          mkdir -p build/logs
-          vendor/bin/phpunit --coverage-clover=build/logs/clover.xml
+      - name: Tests
+        run: vendor/bin/phpunit --coverage-clover clover.xml
 
       - name: Upload coverage results to Coveralls
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          composer require php-coveralls/php-coveralls
-          vendor/bin/php-coveralls --coverage_clover=build/logs/clover.xml -v
+          composer require php-coveralls/php-coveralls -n -W
+          vendor/bin/php-coveralls --coverage_clover=clover.xml -v
