--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,36 +6,34 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions:
-  contents: read
-
 jobs:
-  build:
-
+  tests:
+    name: Tests with PHP${{ matrix.php }}
     runs-on: ubuntu-latest
+    continue-on-error: false
+    strategy:
+      fail-fast: false
+      matrix:
+        php: [8.0]
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Validate composer.json and composer.lock
-        run: composer validate --strict
-
-      - name: Cache Composer packages
-        id: composer-cache
-        uses: actions/cache@v3
+      - name: Set up PHP${{ matrix.php }}
+        uses: shivammathur/setup-php@v2
         with:
-          path: vendor
-          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-php-
+          php-version: ${{ matrix.php }}
+          coverage: xdebug
 
-      - name: Install dependencies
-        run: composer install --prefer-dist --no-progress
+      - name: Install dependencies with Composer
+        uses: ramsey/composer-install@v2
 
       - name: Tests
         run: vendor/bin/phpunit --coverage-clover clover.xml
 
       - name: Upload coverage results to Coveralls
+        if: matrix.analysis
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
