--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,22 +8,18 @@ on:
 
 jobs:
   tests:
-    name: Tests with PHP${{ matrix.php }}
+    name: Tests with PHP8.0
     runs-on: ubuntu-latest
     continue-on-error: false
-    strategy:
-      fail-fast: false
-      matrix:
-        php: [8.0]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up PHP${{ matrix.php }}
+      - name: Set up PHP8.0
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php }}
+          php-version: 8.0
           coverage: xdebug
 
       - name: Install dependencies with Composer
@@ -38,13 +34,3 @@ jobs:
         run: |
           composer require php-coveralls/php-coveralls -n -W
           vendor/bin/php-coveralls --coverage_clover=clover.xml -v
-
-  finish:
-    needs: test
-    if: ${{ always() }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Coveralls Finished
-        uses: coverallsapp/github-action@v2
-        with:
-          parallel-finished: true
