--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,18 +8,22 @@ on:
 
 jobs:
   tests:
-    name: Tests with PHP8.0
+    name: Tests with PHP${{ matrix.php }}
     runs-on: ubuntu-latest
     continue-on-error: false
+    strategy:
+      fail-fast: false
+      matrix:
+        php: [8.0]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up PHP8.0
+      - name: Set up PHP${{ matrix.php }}
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.0
+          php-version: ${{ matrix.php }}
           coverage: xdebug
 
       - name: Install dependencies with Composer
@@ -29,6 +33,7 @@ jobs:
         run: vendor/bin/phpunit --coverage-clover clover.xml
 
       - name: Upload coverage results to Coveralls
+        if: matrix.analysis
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
