--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
           vendor/bin/php-coveralls --coverage_clover=clover.xml -v
 
   finish:
-    needs: test
+    needs: tests
     runs-on: ubuntu-latest
     steps:
       - name: Coveralls Finished
