--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,13 +4,13 @@ on: [push, pull_request]
 
 jobs:
   tests:
-    name: Tests PHP ${{ matrix.php }}
+    name: Tests with PHP${{ matrix.php }}
     runs-on: ubuntu-latest
     continue-on-error: false
     strategy:
       fail-fast: false
       matrix:
-        php: [8.0]
+        php: [8.0, 8.1, 8.2, 8.3]
         include:
           - php: 8.0
             analysis: true
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up PHP ${{ matrix.php }}
+      - name: Set up PHP${{ matrix.php }}
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
