--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,7 +6,7 @@
          colors="true"
 >
     <testsuites>
-        <testsuite name="Slim Test Suite">
+        <testsuite name="Tests">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
@@ -15,8 +15,5 @@
         <include>
             <directory>src</directory>
         </include>
-        <report>
-            <html outputDirectory="coverage" lowUpperBound="20" highLowerBound="50"/>
-        </report>
     </coverage>
 </phpunit>
