--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "php": "^8.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0"
+    "phpunit/phpunit": "^9.0",
+    "php-coveralls/php-coveralls": "^2.7"
   },
   "autoload": {
     "psr-4": {
@@ -30,6 +31,7 @@
     }
   },
   "scripts": {
-    "test": "./vendor/bin/phpunit -c phpunit.xml"
+    "test": "./vendor/bin/phpunit",
+    "test-c": "./vendor/bin/phpunit --coverage-text"
   }
 }
