--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,9 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: false
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
-        php: [8.0, 8.1, 8.2, 8.3]
+        php:
+          - '8.0'
+          - '8.1'
+          - '8.2'
+          - '8.3'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -28,7 +32,7 @@ jobs:
       - name: Install dependencies with Composer
         uses: ramsey/composer-install@v2
 
-      - name: Tests
+      - name: Run tests with coverage results
         run: vendor/bin/phpunit --coverage-clover ./tests/output/clover.xml
 
       - name: Upload coverage results to Coveralls
@@ -37,13 +41,14 @@ jobs:
           COVERALLS_PARALLEL: true
           COVERALLS_FLAG_NAME: ${{ matrix.php }}
         run: |
-          composer require php-coveralls/php-coveralls -n -W
+          composer require php-coveralls/php-coveralls -n
           vendor/bin/php-coveralls --coverage_clover=./tests/output/clover.xml -v --json_path=./tests/output/coveralls-upload.json
   finish:
+    name: Close parallel build
     needs: tests
     runs-on: ubuntu-latest
     steps:
-      - name: Coveralls Finished
+      - name: Close parallel build
         uses: coverallsapp/github-action@v2
         with:
           parallel-finished: true
