--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   tests:
-    name: Tests with PHP${{ matrix.php }}
+    name: Tests with php${{ matrix.php }}
     runs-on: ubuntu-latest
     continue-on-error: false
     strategy:
@@ -16,14 +16,14 @@ jobs:
       matrix:
         php:
           - '8.0'
-          - '8.1'
-          - '8.2'
-          - '8.3'
+          - 8.1
+          - 8.2
+          - 8.3
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up PHP${{ matrix.php }}
+      - name: Set up php${{ matrix.php }}
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
