Added psalm and opcache

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
-    "php-coveralls/php-coveralls": "^2.7"
+    "php-coveralls/php-coveralls": "^2.7",
+    "vimeo/psalm": "^5.13"
   },
   "autoload": {
     "psr-4": {
@@ -32,6 +33,8 @@
   },
   "scripts": {
     "test": "./vendor/bin/phpunit",
-    "test-c": "./vendor/bin/phpunit --coverage-text"
+    "test-c": "./vendor/bin/phpunit --coverage-text",
+    "psalm": "./vendor/bin/psalm --show-info=true",
+    "psalm-t": "./vendor/bin/psalm --config=./tests/psalm.xml --show-info=true"
   }
 }
