--- a/docker/php80/Dockerfile
+++ b/docker/php80/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y \
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 RUN pecl install xdebug && docker-php-ext-enable xdebug
-RUN docker-php-ext-install mbstring exif pcntl bcmath gd
+RUN docker-php-ext-install mbstring exif pcntl bcmath gd opcache
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
