--- a/docker/php80/docker-compose.yml
+++ b/docker/php80/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ../../:/var/www
       - ./xdebug.ini:/usr/local/etc/php/conf.d/.docker-php-ext-xdebug.ini
       - ./error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
+      - ./opcache.ini:/usr/local/etc/php/conf.d/opcache.ini
     networks:
       - default
 
