--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,13 +7,13 @@
 >
     <testsuites>
         <testsuite name="Tests">
-            <directory>tests</directory>
+            <directory>./tests</directory>
         </testsuite>
     </testsuites>
 
     <coverage processUncoveredFiles="true">
         <include>
-            <directory>src</directory>
+            <directory>./src</directory>
         </include>
     </coverage>
 </phpunit>
