--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
   "scripts": {
     "test": "./vendor/bin/phpunit",
     "test-c": "./vendor/bin/phpunit --coverage-text",
-    "psalm": "./vendor/bin/psalm --show-info=true",
+    "psalm": "./vendor/bin/psalm --config=./psalm.xml --show-info=true --shepherd",
     "psalm-t": "./vendor/bin/psalm --config=./tests/psalm.xml --show-info=true"
   }
 }
