Updated github actions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,22 +8,21 @@ on:
 
 jobs:
   tests:
-    name: Tests with PHP${{ matrix.php }}
+    name: Tests with php${{ matrix.php }}
     runs-on: ubuntu-latest
     continue-on-error: false
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
-        php: [8.0, 8.1, 8.2, 8.3]
-        include:
-          - php: 8.0
-            analysis: true
-
+        php:
+          - '8.0'
+          - 8.1
+          - 8.2
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up PHP${{ matrix.php }}
+      - name: Set up php${{ matrix.php }}
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
@@ -32,13 +31,24 @@ jobs:
       - name: Install dependencies with Composer
         uses: ramsey/composer-install@v2
 
-      - name: Tests
+      - name: Run tests with coverage results
         run: vendor/bin/phpunit --coverage-clover ./tests/output/clover.xml
 
       - name: Upload coverage results to Coveralls
-        if: matrix.analysis
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_PARALLEL: true
+          COVERALLS_FLAG_NAME: ${{ matrix.php }}
         run: |
-          composer require php-coveralls/php-coveralls -n -W
+          composer require php-coveralls/php-coveralls -n
           vendor/bin/php-coveralls --coverage_clover=./tests/output/clover.xml -v --json_path=./tests/output/coveralls-upload.json
+  finish:
+    name: Close parallel build
+    needs: tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Close parallel build
+        uses: coverallsapp/github-action@v2
+        with:
+          parallel-finished: true
+          carryforward: "8.0,8.1,8.2,8.3"
