--- a/.github/workflows/code-validation.yml
+++ b/.github/workflows/code-validation.yml
@@ -1,4 +1,4 @@
-name: static-analysis
+name: code-validation
 
 on:
   push:
@@ -7,8 +7,8 @@ on:
     branches: ["main"]
 
 jobs:
-  static-analysis:
-    name: Static analyze code with Psalm
+  code-validation:
+    name: Code validation via Psalm and PHP_CodeSniffer
     runs-on: ubuntu-latest
     continue-on-error: false
     strategy:
@@ -16,8 +16,8 @@ jobs:
       matrix:
         php:
           - '8.0'
-          - 8.1
-          - 8.2
+          - '8.1'
+          - '8.2'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,5 +30,8 @@ jobs:
       - name: Install dependencies with Composer
         uses: ramsey/composer-install@v2
 
-      - name: Static analyze code with Psalm
+      - name: Code validation via Psalm
         run: ./vendor/bin/psalm --config=./psalm.xml --show-info=true --shepherd
+
+      - name: Code validation via PHP_CodeSniffer
+        run: ./vendor/bin/phpcs --no-cache -v
