--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
     "phpunit/phpunit": "^9.0",
     "php-coveralls/php-coveralls": "^2.7",
     "vimeo/psalm": "^5.13",
-    "psalm/plugin-phpunit": "^0.18.4"
+    "psalm/plugin-phpunit": "^0.18.4",
+    "ramsey/coding-standard": "^2.1",
+    "squizlabs/php_codesniffer": "^3.8"
   },
   "autoload": {
     "psr-4": {
@@ -37,5 +39,10 @@
     "test-c": "./vendor/bin/phpunit --coverage-text",
     "psalm": "./vendor/bin/psalm --config=./psalm.xml --show-info=true --shepherd",
     "psalm-t": "./vendor/bin/psalm --config=./tests/psalm.xml --show-info=true"
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
