--- a/docker/php80/docker-compose.yml
+++ b/docker/php80/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - PHP_IDE_CONFIG=serverName=localhost
     volumes:
       - ../../:/var/www
-      - ./xdebug.ini:/usr/local/etc/php/conf.d/.docker-php-ext-xdebug.ini
+      - ./xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
       - ./error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
       - ./opcache.ini:/usr/local/etc/php/conf.d/opcache.ini
     networks:
