--- a/docker/php83/Dockerfile
+++ b/docker/php83/Dockerfile
@@ -1,6 +1,7 @@
 FROM php:8.3-fpm
 
 ARG user=docker
+ENV XDEBUG_MODE=coverage
 
 RUN apt-get update && apt-get install -y \
     git \
@@ -13,7 +14,8 @@ RUN apt-get update && apt-get install -y \
 
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN docker-php-ext-install mbstring exif pcntl bcmath gd
+RUN pecl install xdebug && docker-php-ext-enable xdebug
+RUN docker-php-ext-install mbstring exif pcntl bcmath gd opcache
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
