--- a/docker/php81/docker-compose.yml
+++ b/docker/php81/docker-compose.yml
@@ -8,10 +8,14 @@ services:
     container_name: php-collection
     restart: unless-stopped
     working_dir: /var/www/
+    environment:
+      - XDEBUG_SESSION=PHPSTORM
+      - PHP_IDE_CONFIG=serverName=localhost
     volumes:
       - ../../:/var/www
       - ./xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
       - ./error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
+      - ./opcache.ini:/usr/local/etc/php/conf.d/opcache.ini
     networks:
       - default
 
