--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
     "test": "./vendor/bin/phpunit",
     "test-c": "./vendor/bin/phpunit --coverage-text",
     "psalm": "./vendor/bin/psalm --config=./psalm.xml --show-info=true --shepherd",
-    "psalm-t": "./vendor/bin/psalm --config=./tests/psalm.xml --show-info=true"
+    "psalm-t": "./vendor/bin/psalm --config=./tests/psalm.xml --show-info=true",
+    "phpcs": "./vendor/bin/phpcs",
+    "phpcs-v": "./vendor/bin/phpcs -v"
   },
   "config": {
     "allow-plugins": {
