--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,17 @@
     }
   },
   "scripts": {
+    "check-all": [
+      "composer install",
+      "@test-c",
+      "@psalm",
+      "@psalm-t",
+      "@phpcs"
+    ],
     "test": "./vendor/bin/phpunit",
     "test-c": "./vendor/bin/phpunit --coverage-text",
-    "psalm": "./vendor/bin/psalm --config=./psalm.xml --show-info=true --shepherd",
-    "psalm-t": "./vendor/bin/psalm --config=./tests/psalm.xml --show-info=true",
+    "psalm": "./vendor/bin/psalm --config=./psalm.xml",
+    "psalm-t": "./vendor/bin/psalm --config=./tests/psalm.xml",
     "phpcs": "./vendor/bin/phpcs",
     "phpcs-v": "./vendor/bin/phpcs -v"
   },
