--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "require-dev": {
     "phpunit/phpunit": "^9.0",
     "php-coveralls/php-coveralls": "^2.7",
-    "vimeo/psalm": "^5.13",
+    "vimeo/psalm": "^5.16",
     "psalm/plugin-phpunit": "^0.18.4",
     "ramsey/coding-standard": "^2.1",
     "squizlabs/php_codesniffer": "^3.8"
@@ -35,10 +35,19 @@
     }
   },
   "scripts": {
+    "check-all": [
+      "composer install",
+      "@test-c",
+      "@psalm",
+      "@psalm-t",
+      "@phpcs"
+    ],
     "test": "./vendor/bin/phpunit",
     "test-c": "./vendor/bin/phpunit --coverage-text",
-    "psalm": "./vendor/bin/psalm --config=./psalm.xml --show-info=true --shepherd",
-    "psalm-t": "./vendor/bin/psalm --config=./tests/psalm.xml --show-info=true"
+    "psalm": "./vendor/bin/psalm --config=./psalm.xml",
+    "psalm-t": "./vendor/bin/psalm --config=./tests/psalm.xml",
+    "phpcs": "./vendor/bin/phpcs",
+    "phpcs-v": "./vendor/bin/phpcs -v"
   },
   "config": {
     "allow-plugins": {
